--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,19 @@ Package: isopleuros
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    c(person(given = "Nicolas",
+             family = "Frerebeau",
+             role = c("aut", "cre"),
+             email = "nicolas.frerebeau@u-bordeaux-montaigne.fr",
+             comment = c(ORCID = "0000-0001-5759-4944", 
+                         affiliation = "Université Bordeaux Montaigne")))
+Maintainer: Nicolas Frerebeau
+    <nicolas.frerebeau@u-bordeaux-montaigne.fr>
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
+URL: https://packages.tesselle.org/isopleuros/,
+    https://github.com/tesselle/isopleuros
+BugReports: https://github.com/tesselle/isopleuros/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
