--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,13 @@ BugReports: https://github.com/tesselle/isopleuros/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Imports: 
+    grDevices,
+    methods
+Collate: 
+    'AllGenerics.R'
+    'coordinates.R'
+    'isopleuros-package.R'
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
