Add ternary plot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,15 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Imports: 
+    graphics,
     grDevices,
     methods
 Collate: 
     'AllGenerics.R'
     'coordinates.R'
     'isopleuros-package.R'
+    'plot.R'
+    'utilities.R'
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
