Fix NAMESPACE import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(ternary_grid)
 exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
 exportMethods(ternary_plot)
-import(methods)
+importFrom(methods,.valueClassTest)
+importFrom(methods,setGeneric)
+importFrom(methods,setMethod)
