Add lines, points and polygon

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(ternary_axis)
 export(ternary_grid)
 exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
+exportMethods(ternary_lines)
 exportMethods(ternary_plot)
+exportMethods(ternary_points)
+exportMethods(ternary_polygon)
 importFrom(methods,.valueClassTest)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
