Add text to a ternary plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ exportMethods(ternary_lines)
 exportMethods(ternary_plot)
 exportMethods(ternary_points)
 exportMethods(ternary_polygon)
+exportMethods(ternary_text)
 importFrom(methods,.valueClassTest)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
