--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,15 @@ export(ternary_axis)
 export(ternary_grid)
 exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
+exportMethods(ternary_confidence)
+exportMethods(ternary_ellipse)
+exportMethods(ternary_hull)
 exportMethods(ternary_lines)
 exportMethods(ternary_plot)
 exportMethods(ternary_points)
 exportMethods(ternary_polygon)
 exportMethods(ternary_text)
+exportMethods(ternary_tolerance)
 importFrom(methods,.valueClassTest)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
