--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ternary_axis)
 export(ternary_grid)
 exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
+exportMethods(ternary_arrows)
 exportMethods(ternary_confidence)
 exportMethods(ternary_ellipse)
 exportMethods(ternary_hull)
