--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods(ternary_confidence)
 exportMethods(ternary_ellipse)
 exportMethods(ternary_hull)
 exportMethods(ternary_lines)
+exportMethods(ternary_mean)
 exportMethods(ternary_pairs)
 exportMethods(ternary_plot)
 exportMethods(ternary_points)
