--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,12 @@
 export(ternary_axis)
 export(ternary_grid)
 export(ternary_title)
+export(triangle_phase_cas)
+export(triangle_phase_ceramic)
+export(triangle_soil_folk)
+export(triangle_soil_hypres)
+export(triangle_soil_shepard)
+export(triangle_soil_usda)
 exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
 exportMethods(ternary_arrows)
