--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,8 @@ BugReports: https://github.com/tesselle/isopleuros/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Depends: 
+    R (>= 2.10)
 Imports: 
     graphics,
     grDevices,
@@ -32,6 +34,7 @@ Suggests:
     vdiffr (>= 1.0.0)
 Collate: 
     'AllGenerics.R'
+    'chart.R'
     'coordinates.R'
     'isopleuros-package.R'
     'pairs.R'
