--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,6 @@ License: GPL (>= 3)
 URL: https://packages.tesselle.org/isopleuros/,
     https://github.com/tesselle/isopleuros
 BugReports: https://github.com/tesselle/isopleuros/issues
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
 Depends: 
     R (>= 2.10)
 Imports: 
@@ -32,6 +29,10 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0),
     vdiffr (>= 1.0.0)
+Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.1
 Collate: 
     'AllGenerics.R'
     'chart.R'
@@ -41,4 +42,4 @@ Collate:
     'plot.R'
     'statistics.R'
     'utilities.R'
-Config/testthat/edition: 3
+    'zzz.R'
