--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ exportMethods(ternary_pairs)
 exportMethods(ternary_plot)
 exportMethods(ternary_points)
 exportMethods(ternary_polygon)
+exportMethods(ternary_segments)
 exportMethods(ternary_text)
 exportMethods(ternary_tolerance)
 importFrom(methods,.valueClassTest)
