--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ exportMethods(coordinates_ternary)
 exportMethods(ternary_arrows)
 exportMethods(ternary_confidence)
 exportMethods(ternary_crosshairs)
+exportMethods(ternary_density)
 exportMethods(ternary_ellipse)
 exportMethods(ternary_hull)
 exportMethods(ternary_lines)
