--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ exportMethods(coordinates_cartesian)
 exportMethods(coordinates_ternary)
 exportMethods(ternary_arrows)
 exportMethods(ternary_confidence)
+exportMethods(ternary_contour)
 exportMethods(ternary_crosshairs)
 exportMethods(ternary_density)
 exportMethods(ternary_ellipse)
