--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ exportMethods(ternary_hull)
 exportMethods(ternary_lines)
 exportMethods(ternary_mean)
 exportMethods(ternary_pairs)
+exportMethods(ternary_pca)
 exportMethods(ternary_plot)
 exportMethods(ternary_points)
 exportMethods(ternary_polygon)
