Prepare for first release

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: isopleuros
-Title: Ternary Plot
-Version: 0.0.0.9000
+Title: Ternary Plots
+Version: 1.0.0
 Authors@R: 
     c(person(given = "Nicolas",
              family = "Frerebeau",
