--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,31 @@ exportMethods(ternary_polygon)
 exportMethods(ternary_segments)
 exportMethods(ternary_text)
 exportMethods(ternary_tolerance)
+importFrom(grDevices,as.graphicsAnnot)
+importFrom(grDevices,as.raster)
+importFrom(grDevices,chull)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,contourLines)
+importFrom(grDevices,dev.flush)
+importFrom(grDevices,dev.hold)
+importFrom(grDevices,hcl.colors)
+importFrom(grDevices,xyz.coords)
+importFrom(graphics,arrows)
+importFrom(graphics,layout)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,plot.default)
+importFrom(graphics,plot.new)
+importFrom(graphics,plot.window)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,rasterImage)
+importFrom(graphics,segments)
+importFrom(graphics,strheight)
+importFrom(graphics,strwidth)
+importFrom(graphics,text)
 importFrom(methods,.valueClassTest)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(utils,combn)
