--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,10 @@ Authors@R:
                          affiliation = "Université Bordeaux Montaigne")))
 Maintainer: Nicolas Frerebeau <nicolas.frerebeau@u-bordeaux-montaigne.fr>
 Description: Ternary plots made simple. This package allows to create
-    ternary plot using 'graphics'. It provides functions to display the
+    ternary plots using 'graphics'. It provides functions to display the
     data in the ternary space, to add or tune graphical elements and to
     display statistical summaries. It also includes common ternary
-    diagrams useful for the archaeologist (e.g. soil texture charts,
+    diagrams which are useful for the archaeologist (e.g. soil texture charts,
     ceramic phase diagram).
 License: GPL (>= 3)
 URL: https://packages.tesselle.org/isopleuros/,
