--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ exportMethods(ternary_crosshairs)
 exportMethods(ternary_density)
 exportMethods(ternary_ellipse)
 exportMethods(ternary_hull)
+exportMethods(ternary_labels)
 exportMethods(ternary_lines)
 exportMethods(ternary_mean)
 exportMethods(ternary_pairs)
@@ -56,4 +57,6 @@ importFrom(graphics,text)
 importFrom(methods,.valueClassTest)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(stats,as.dist)
+importFrom(stats,optim)
 importFrom(utils,combn)
