Allow to center and scale data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,3 +60,4 @@ importFrom(methods,setMethod)
 importFrom(stats,as.dist)
 importFrom(stats,optim)
 importFrom(utils,combn)
+importFrom(utils,modifyList)
