--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ exportMethods(ternary_crosshairs)
 exportMethods(ternary_density)
 exportMethods(ternary_ellipse)
 exportMethods(ternary_hull)
+exportMethods(ternary_image)
 exportMethods(ternary_labels)
 exportMethods(ternary_lines)
 exportMethods(ternary_mean)
