--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Collate:
     'ternary_ellipse.R'
     'ternary_grid.R'
     'ternary_hull.R'
+    'ternary_image.R'
     'ternary_labels.R'
     'ternary_lines.R'
     'ternary_mean.R'
