--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,9 @@ Description: Ternary plots made simple. This package allows to create
     diagrams which are useful for the archaeologist (e.g. soil texture
     charts, ceramic phase diagram).
 License: GPL (>= 3)
-URL: https://packages.tesselle.org/isopleuros/,
-    https://github.com/tesselle/isopleuros
-BugReports: https://github.com/tesselle/isopleuros/issues
+URL: https://codeberg.org/tesselle/isopleuros,
+    https://packages.tesselle.org/isopleuros/
+BugReports: https://codeberg.org/tesselle/isopleuros/issues
 Depends: 
     R (>= 3.5)
 Imports: 
