--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,10 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+X-schema.org-applicationCategory: Archaeological Science
+X-schema.org-isPartOf: https://www.tesselle.org
+X-schema.org-keywords: archaeometry, archaeological-science, ternary-plot,
+    data-visualization, r-package
 Collate: 
     'AllGenerics.R'
     'coordinates.R'
