Export tile computation methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,9 @@ exportMethods(ternary_polygon)
 exportMethods(ternary_segments)
 exportMethods(ternary_text)
 exportMethods(ternary_tolerance)
+exportMethods(tile_bin)
+exportMethods(tile_density)
+exportMethods(tile_interpolate)
 importFrom(grDevices,as.graphicsAnnot)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,chull)
